tests/types/errors/option_deref_unguarded.mochi
// MEP-16 T058: a field access on an Option<T> binding without a none
// guard is rejected. The fix is `if p != none { p.name }` or a `??`
// fallback.
type Person { name: string }
let p: Person? = none
let label = p.name
